finish home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,56 @@
 .App {
   text-align: center;
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+
+body {
+
+  font-family: 'Open Sans', sans-serif;
+  background-color: #fff;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+header {
+  /* color: #fff; */
+  background-color: none;
+  /* padding: 33px 0 25px 15px; */
+}
+
+.navbar{
+  background-color: none;
+  color: black;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* margin: 5%; */
+}
+
+.navbar-nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+}
+
+.navbar-brand {
+  margin-left: 5%;
+}
+
+.navbar-collapse {
+  margin-right: 10%;
+}
+
+ul {
+  list-style-type: none;
   color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.nav-item{
+  margin: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-link {
+ text-decoration: none;
+ color: white;
 }
